unpackaged/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>ATS Product</label>
    <nameField>
        <label>Product #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATS Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>