unpackaged/main/default/objects/Product__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <formula>IF( CONTAINS( LOWER(Product_Name__c ), &#39;agency&#39;), True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency?</label>
    <type>Checkbox</type>
</CustomField>