unpackaged/main/default/objects/Product__c/fields/Amino_Acids__c.field-meta.xml
<CustomField>
    <fullName>Amino_Acids__c</fullName>
    <label>Amino Acids?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>