unpackaged/main/default/objects/Product__c/fields/Analysis__c.field-meta.xml
<CustomField>
    <fullName>Analysis__c</fullName>
    <formula>IF( N__c &gt; 0 || P__c &gt; 0 || K__c &gt; 0,TEXT(NULLVALUE(N__c,0)*100) + &#39;-&#39; + TEXT(NULLVALUE(P__c,0)*100) + &#39;-&#39; + TEXT(NULLVALUE(K__c,0)*100),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analysis</label>
    <type>Text</type>
</CustomField>