unpackaged/main/default/objects/Product__c/fields/App_Type__c.field-meta.xml
<CustomField>
    <fullName>App_Type__c</fullName>
    <label>App Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sprayable Formulation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>