unpackaged/main/default/objects/Product__c/fields/Apparel_Program__c.field-meta.xml
<CustomField>
    <fullName>Apparel_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this product qualifies for the Apparel Program Incentive</inlineHelpText>
    <label>Apparel Program?</label>
    <type>Checkbox</type>
</CustomField>