unpackaged/main/default/objects/Product__c/fields/Armament__c.field-meta.xml
<CustomField>
    <fullName>Armament__c</fullName>
    <label>Armament?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>