unpackaged/main/default/objects/Product__c/fields/Average_Cost__c.field-meta.xml
<CustomField>
    <fullName>Average_Cost__c</fullName>
    <description>Management Information Only</description>
    <inlineHelpText>Management Information Only</inlineHelpText>
    <label>Standard Cost</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>