unpackaged/main/default/objects/Product__c/fields/Cat_Rank__c.field-meta.xml
<CustomField>
    <fullName>Cat_Rank__c</fullName>
    <description>Used in reports. Shows product ranking in terms of Extended Price Sales in PREV FY</description>
    <inlineHelpText>Shows product ranking in terms of total extended price in prev. FY</inlineHelpText>
    <label>Cat Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>