unpackaged/main/default/objects/Product__c/fields/Chemical_Type__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Type__c</fullName>
    <label>Chemical Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fungicide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>