unpackaged/main/default/objects/Product__c/fields/Code_Diff__c.field-meta.xml
<CustomField>
    <fullName>Code_Diff__c</fullName>
    <formula>TRIM( Name ) &lt;&gt; TRIM(Product_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Diff</label>
    <type>Checkbox</type>
</CustomField>