unpackaged/main/default/objects/Product__c/fields/Contains_Organic__c.field-meta.xml
<CustomField>
    <fullName>Contains_Organic__c</fullName>
    <label>Contains Organic?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>