unpackaged/main/default/objects/Product__c/fields/Dyes_Colorants__c.field-meta.xml
<CustomField>
    <fullName>Dyes_Colorants__c</fullName>
    <label>Dyes &amp; Colorants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>