unpackaged/main/default/objects/Product__c/fields/EOP_Eligible__c.field-meta.xml
<CustomField>
    <fullName>EOP_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This product are in Price Book Master- 2020 Early Order Price Book (September)</description>
    <inlineHelpText>This product is in Price Book Master- 2020 Early Order Price Book (September)</inlineHelpText>
    <label>EOP Eligible?</label>
    <type>Checkbox</type>
</CustomField>