unpackaged/main/default/objects/Product__c/fields/EPA__c.field-meta.xml
<CustomField>
    <fullName>EPA__c</fullName>
    <label>EPA #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>