unpackaged/main/default/objects/Product__c/fields/Exempt_WH__c.field-meta.xml
<CustomField>
    <fullName>Exempt_WH__c</fullName>
    <description>From Salespad, the Warehouse(s) where exempt products may be sold</description>
    <inlineHelpText>From Salespad, the Warehouse(s) where exempt products may be sold</inlineHelpText>
    <label>Exempt WH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>