unpackaged/main/default/objects/Product__c/fields/Fert_Reg_State__c.field-meta.xml
<CustomField>
    <fullName>Fert_Reg_State__c</fullName>
    <description>Fertilizer Registration State (Fertilizer Only)</description>
    <inlineHelpText>Fertilizer Registration State (Fertilizer Only)</inlineHelpText>
    <label>Fert. Reg. State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>