unpackaged/main/default/objects/Product__c/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <description>The floor price of the item (Can be Agency, Market Floor, Internal Floor)</description>
    <inlineHelpText>The floor price of the item (Can be Agency, Market Floor, Internal Floor)</inlineHelpText>
    <label>Floor Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>