unpackaged/main/default/objects/Product__c/fields/Floor_Type__c.field-meta.xml
<CustomField>
    <fullName>Floor_Type__c</fullName>
    <description>The floor type of the item (Can be Agency, Market Floor, Internal Floor)</description>
    <inlineHelpText>The floor type of the item (Can be Agency, Market Floor, Internal Floor)</inlineHelpText>
    <label>Floor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>ATS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>