unpackaged/main/default/objects/Product__c/fields/Focus_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Focus_Product_Category__c</fullName>
    <label>Focus Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Focus_Product_Category</valueSetName>
    </valueSet>
</CustomField>