unpackaged/main/default/objects/Product__c/fields/Focus_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Focus_Product_Group__c</fullName>
    <label>Focus Product Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Focus_Product_Group</valueSetName>
    </valueSet>
</CustomField>