unpackaged/main/default/objects/Product__c/fields/Golf_Market__c.field-meta.xml
<CustomField>
    <fullName>Golf_Market__c</fullName>
    <label>Golf Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>