unpackaged/main/default/objects/Product__c/fields/GP_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>GP_Item_Category__c</fullName>
    <description>The Item Category from GP (field USCATVLS_2 on Item Master joins to IV40600 which has the Item Category description).</description>
    <label>GP Item Category</label>
    <length>120</length>
    <type>Text</type>
</CustomField>