unpackaged/main/default/objects/Product__c/fields/GP_Item_Class__c.field-meta.xml
<CustomField>
    <fullName>GP_Item_Class__c</fullName>
    <label>GP Item Class</label>
    <length>120</length>
    <type>Text</type>
</CustomField>