unpackaged/main/default/objects/Product__c/fields/GP_Item_Group__c.field-meta.xml
<CustomField>
    <fullName>GP_Item_Group__c</fullName>
    <description>The Item Group from GP (field USCATVLS_3 on Item Master joins to IV40600 which has the Item Category Description).</description>
    <label>GP Item Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>