unpackaged/main/default/objects/Product__c/fields/GP_Qty_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>GP_Qty_On_Hand__c</fullName>
    <description>Total Quantity on Hand from the Product Master in GP</description>
    <label>GP Qty On Hand</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>