unpackaged/main/default/objects/Product__c/fields/In_JDT_Service_Book__c.field-meta.xml
<CustomField>
    <fullName>In_JDT_Service_Book__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To see if a record of this product is in Product2</description>
    <label>In JDT Service Book</label>
    <type>Checkbox</type>
</CustomField>