unpackaged/main/default/objects/Product__c/fields/Include_in_Programs__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Programs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Signifies if this product is available for adding to Customer Programs using the Program Writer</inlineHelpText>
    <label>Include in Programs?</label>
    <type>Checkbox</type>
</CustomField>