unpackaged/main/default/objects/Product__c/fields/Insecticide__c.field-meta.xml
<CustomField>
    <fullName>Insecticide__c</fullName>
    <label>Insecticide?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>