unpackaged/main/default/objects/Product__c/fields/Insecticide_Type__c.field-meta.xml
<CustomField>
    <fullName>Insecticide_Type__c</fullName>
    <label>Insecticide Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bifenthrin</fullName>
            </value>
            <value>
                <fullName>Imida-lamba</fullName>
            </value>
            <value>
                <fullName>Acelepryn</fullName>
            </value>
            <value>
                <fullName>Merit</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>