unpackaged/main/default/objects/Product__c/fields/Inv_Diff__c.field-meta.xml
<CustomField>
    <fullName>Inv_Diff__c</fullName>
    <formula>GP_Qty_On_Hand__c &lt;&gt;  Total_Qty_On_Hand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Will indicate if the total inventory on the product in GP is different than the actual sum of inventory records in Salesforce (indicating problem with integration)</inlineHelpText>
    <label>Inv Diff</label>
    <type>Checkbox</type>
</CustomField>