unpackaged/main/default/objects/Product__c/fields/Inventory_Value__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Value__c</fullName>
    <formula>Average_Cost__c *  Total_Qty_On_Hand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The value of the inventory based on the current cost and qty on hand in all warehouses</inlineHelpText>
    <label>Inventory Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>