unpackaged/main/default/objects/Product__c/fields/JDT_Product__c.field-meta.xml
<CustomField>
    <fullName>JDT_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JDT Product</label>
    <type>Checkbox</type>
</CustomField>