unpackaged/main/default/objects/Product__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <type>Url</type>
</CustomField>