unpackaged/main/default/objects/Product__c/fields/Last_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Date__c</fullName>
    <description>The most recent sale of this product (based on Sales Doc Date)</description>
    <label>Last Purchase Date</label>
    <summarizedField>Sales_Doc_Detail__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>Sales_Doc_Detail__c.Unit_Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Doc_Detail__c.Product__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>