unpackaged/main/default/objects/Product__c/fields/Level_2__c.field-meta.xml
<CustomField>
    <fullName>Level_2__c</fullName>
    <label>Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>