unpackaged/main/default/objects/Product__c/fields/margin_1__c.field-meta.xml
<CustomField>
    <fullName>margin_1__c</fullName>
    <label>Margin 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>