unpackaged/main/default/objects/Product__c/fields/Margin_2__c.field-meta.xml
<CustomField>
    <fullName>Margin_2__c</fullName>
    <label>Margin 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>