unpackaged/main/default/objects/Product__c/fields/Margin_Code__c.field-meta.xml
<CustomField>
    <fullName>Margin_Code__c</fullName>
    <description>From the ERP Dynamics GP, a Margin Code of &quot;NO&quot; Indicates it should not be on sales analysis reports (ie ATS Shipping, Crate Fees, Custom Apps)</description>
    <label>Margin Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>