unpackaged/main/default/objects/Product__c/fields/N__c.field-meta.xml
<CustomField>
    <fullName>N__c</fullName>
    <label>N</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>