unpackaged/main/default/objects/Product__c/fields/Non_Agency_EOP__c.field-meta.xml
<CustomField>
    <fullName>Non_Agency_EOP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track non-agency products for EOP.</description>
    <label>Non-Agency EOP</label>
    <type>Checkbox</type>
</CustomField>