unpackaged/main/default/objects/Product__c/fields/Non_Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Non_Inventory_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product not held in inventory but still needed for sales document line items</description>
    <inlineHelpText>Product not held in inventory but still needed for sales document line items</inlineHelpText>
    <label>Non Inventory Item</label>
    <type>Checkbox</type>
</CustomField>