unpackaged/main/default/objects/Product__c/fields/Number_of_Sites_with_Qty__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sites_with_Qty__c</fullName>
    <description>The number of sites that have an on hand qty &gt; 0</description>
    <label># of Sites with Inventory</label>
    <summaryFilterItems>
        <field>Inventory__c.Qty_On_Hand__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Inventory__c.Inventory_Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>