unpackaged/main/default/objects/Product__c/fields/Open_Orders__c.field-meta.xml
<CustomField>
    <fullName>Open_Orders__c</fullName>
    <inlineHelpText>Current open orders</inlineHelpText>
    <label>Open Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>