unpackaged/main/default/objects/Product__c/fields/Override_Cost__c.field-meta.xml
<CustomField>
    <fullName>Override_Cost__c</fullName>
    <description>Updated by integration with Salespad; if greater than 0 will be used instead of Average Cost in Current Cost Formula (Reps will see Current Cost in App, Recommended Pricing formulas, etc)</description>
    <label>Override Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>