unpackaged/main/default/objects/Product__c/fields/P__c.field-meta.xml
<CustomField>
    <fullName>P__c</fullName>
    <label>P</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>