unpackaged/main/default/objects/Product__c/fields/Pre_Emergent__c.field-meta.xml
<CustomField>
    <fullName>Pre_Emergent__c</fullName>
    <label>Pre-Emergent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>