unpackaged/main/default/objects/Product__c/fields/Pre_Type__c.field-meta.xml
<CustomField>
    <fullName>Pre_Type__c</fullName>
    <label>Pre Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prodiamine</fullName>
            </value>
            <value>
                <fullName>Dithiopyr</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>