unpackaged/main/default/objects/Product__c/fields/Primary_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Category__c</fullName>
    <inlineHelpText>The primary category for this product (will match with Website categories)</inlineHelpText>
    <label>Primary Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Web_Category</valueSetName>
    </valueSet>
</CustomField>