unpackaged/main/default/objects/Product__c/fields/Prod_Code_Length__c.field-meta.xml
<CustomField>
    <fullName>Prod_Code_Length__c</fullName>
    <formula>LEN ( Product_Code__c )</formula>
    <label>Prod Code Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>