unpackaged/main/default/objects/Product__c/fields/Prod_Length__c.field-meta.xml
<CustomField>
    <fullName>Prod_Length__c</fullName>
    <formula>LEN( Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod # Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>