unpackaged/main/default/objects/Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>The unique product identifier in the ERP (will auto-update the name field using field update workflow)</description>
    <externalId>true</externalId>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>