unpackaged/main/default/objects/Product__c/fields/Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost__c</fullName>
    <description>Will show current Average Cost or the Override Cost if there is one, visible to all Sales Reps.</description>
    <formula>IF( Override_Cost__c &gt; 0, Override_Cost__c,  Average_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>