unpackaged/main/default/objects/Product__c/fields/Product_Market_s__c.field-meta.xml
<CustomField>
    <fullName>Product_Market_s__c</fullName>
    <label>Product Market(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market</valueSetName>
    </valueSet>
</CustomField>