unpackaged/main/default/objects/Product__c/fields/Product_Name_And_Num__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_And_Num__c</fullName>
    <formula>Product_Name__c + &quot; [&quot; +  Name  + &quot;]&quot;</formula>
    <label>Product Name/#</label>
    <type>Text</type>
</CustomField>