unpackaged/main/default/objects/Product__c/fields/Product_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Product_Prefix__c</fullName>
    <description>Only used for categorizing Products on Reports</description>
    <formula>IF(OR(BEGINS(Name, &quot;PA&quot;),BEGINS(Name, &quot;SG&quot;),BEGINS(Name, &quot;MT&quot;),BEGINS(Name, &quot;SD&quot;)), LEFT(Name, 2), IF(BEGINS(Name, &quot;GNC&quot;), LEFT(Name, 3), &quot;&quot;))</formula>
    <label>Product # Prefix</label>
    <type>Text</type>
</CustomField>