unpackaged/main/default/objects/Product__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Status</valueSetName>
    </valueSet>
</CustomField>