unpackaged/main/default/objects/Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dry</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>