unpackaged/main/default/objects/Product__c/fields/SDS__c.field-meta.xml
<CustomField>
    <fullName>SDS__c</fullName>
    <label>SDS</label>
    <type>Url</type>
</CustomField>