unpackaged/main/default/objects/Product__c/fields/SGN__c.field-meta.xml
<CustomField>
    <fullName>SGN__c</fullName>
    <label>SGN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>