unpackaged/main/default/objects/Product__c/fields/Ship_Weight__c.field-meta.xml
<CustomField>
    <fullName>Ship_Weight__c</fullName>
    <label>Ship Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>