unpackaged/main/default/objects/Product__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <inlineHelpText>The volume or weight of the product (ounces for liquids and pounds for dry)</inlineHelpText>
    <label>Size (oz or lbs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>