unpackaged/main/default/objects/Product__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <description>The secondary category (if applicable) - dependent on Primary Category</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Web_Sub_Category</valueSetName>
    </valueSet>
</CustomField>