unpackaged/main/default/objects/Product__c/fields/Total_Open_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Units__c</fullName>
    <label>Total Open #</label>
    <summarizedField>Open_Order_Detail__c.Quantity__c</summarizedField>
    <summaryForeignKey>Open_Order_Detail__c.Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>