unpackaged/main/default/objects/Product__c/fields/Total_Qty_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_Allocated__c</fullName>
    <label>Total Qty Allocated</label>
    <summarizedField>Inventory__c.Qty_Allocated__c</summarizedField>
    <summaryForeignKey>Inventory__c.Inventory_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>