unpackaged/main/default/objects/Product__c/fields/Total_Qty_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_Available__c</fullName>
    <inlineHelpText>Quantity Available  (On hand minus Allocated) across all sites for this product</inlineHelpText>
    <label>Total Qty Available</label>
    <summarizedField>Inventory__c.Qty_Available__c</summarizedField>
    <summaryForeignKey>Inventory__c.Inventory_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>