unpackaged/main/default/objects/Product__c/fields/Total_Qty_Backordered__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_Backordered__c</fullName>
    <description>Total Qty Backordered (Roll-Up Summary of all Locations B/O)</description>
    <label>Total Qty B/O</label>
    <summarizedField>Inventory__c.Qty_Backordered__c</summarizedField>
    <summaryForeignKey>Inventory__c.Inventory_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>