unpackaged/main/default/objects/Product__c/fields/Total_Qty_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_On_Hand__c</fullName>
    <description>The total of all inventory on hand</description>
    <label>Total Qty On Hand</label>
    <summarizedField>Inventory__c.Qty_On_Hand__c</summarizedField>
    <summaryForeignKey>Inventory__c.Inventory_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>