unpackaged/main/default/objects/Product__c/fields/Total_Qty_on_Order__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_on_Order__c</fullName>
    <description>Total on Order according to Inventory Location record in GP (if discrepancy with open POs, that means the item needs reconciled in GP)</description>
    <label>Total Qty on Order</label>
    <summarizedField>Inventory__c.Qty_On_Order__c</summarizedField>
    <summaryForeignKey>Inventory__c.Inventory_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>