unpackaged/main/default/objects/Product__c/fields/Tree_Ornamental__c.field-meta.xml
<CustomField>
    <fullName>Tree_Ornamental__c</fullName>
    <label>Tree &amp; Ornamental?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>