unpackaged/main/default/objects/Product__c/fields/Turfgrass__c.field-meta.xml
<CustomField>
    <fullName>Turfgrass__c</fullName>
    <label>Turfgrass?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>