unpackaged/main/default/objects/Product__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measure</valueSetName>
    </valueSet>
</CustomField>