unpackaged/main/default/objects/Product__c/fields/Web_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Product_Name__c</fullName>
    <inlineHelpText>The Product Name displayed on the ATS Website</inlineHelpText>
    <label>Web Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>