unpackaged/main/default/objects/Product__c/fields/Website_Category__c.field-meta.xml
<CustomField>
    <fullName>Website_Category__c</fullName>
    <label>Website Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fertilizer</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>